some mobile changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 	<!-- <link rel="stylesheet" href="assets/css/jquery-ui.min.css"> -->
 	<!-- <link rel="stylesheet" href="assets/css/jquery-ui.theme.min.css"> -->
@@ -20,12 +20,12 @@
   <div class="container-fluid" id="navchange">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="navbarfull" aria-expanded="false">
+ <!--      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="navbarfull" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
+      </button> -->
       <a class="navbar-brand" href="index.html">Tip of the Tongue</a>
     </div>
   </div><!-- /.container-fluid -->
